--- a/assets/libs/css/styles.css
+++ b/assets/libs/css/styles.css
@@ -1,442 +1,27 @@
 /*Geral*/
-body{
-    font-family: 'Roboto', sans-serif;
-    background: linear-gradient(180deg, #0F123F 20.83%, #500D35 100%);
-}
+@import "../css/geral.css";
 
-.row{
-    margin: 0;
-    text-align: center;
-    
-}
-
-.title, .subtitle{
-  color: #fff;
-}
-
-.container{
-    padding: 70px 0;
-}
-
-p, li {
-    color: #fff;
-    font-size: 14px;
-}
-
-.btn{
-  background: rgba(67, 17, 106, 1);
-  border-radius: 68px;
-
-}
-
-/*Nav bar*/
-
-.navbar-brand{
-    padding: 0;
-
-    background-image: linear-gradient(90deg, rgba(186,10,208,1) 30%, rgba(76,127,240,1) 60%, rgba(9,72,214,1) 100%);
-
-    background-clip: text;
-    -webkit-background-clip: text;
-
-    -webkit-text-fill-color: transparent;
-
-    color: black;
-}
-
-.navbar-expand-lg .navbar-nav .nav-link{
-    padding: 1rem .8rem;
-}
+/*Menu*/
+@import "../css/nav.css";
 
 /*Home*/
-
-section#home {
-    height: calc(100vh + 80px);
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding: 5px 20px;
-    width: 100%;
-    
-  }
-  
-.home-info {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    text-align: justify;
-    color: #fff;
-}
-  
-.home-info button {
-    border: none;
-    width: 150px;
-    padding: 10px;
-    background-color: #7700ff;
-    color: white;
-    font-size: 18px;
-    cursor: pointer;
-    opacity: 0.9;
-    border-radius: 5px;
-}
-  
-.home-info button a{
-    color: white;
-}
-  
-.home-info button:hover{
-    opacity: 1;
-}
-  
-.home-img {
-    width: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-  
-.home-img img {
-    width: 200px;
-    height: 200px;
-    box-shadow: 0 10px 10px;
-    border-radius: 50%;
-}
-
-.home-position {
-    font-style: italic;
-}
-  
-@keyframes float {
-    0%, 100% {
-      transform: translateY(0);
-    }
-    50% {
-      transform: translateY(-30px);
-    }
-  }
-
-
-/*Mobile*/
-
-@media (max-width: 450px) {
-    header {
-    justify-content: center;
-    }
-    
-.logo {
-    display: none;
-    }
-  
-section#home {
-    flex-direction: column-reverse;
-    justify-content: center;
-    }
-  
-.home-info, .home-img {
-    width: 100%;
-    padding: 10px;
-    }
-}
+@import "../css/home.css";
 
 /*Sobre*/
-#info-content {
-  margin-bottom: 4em;
-  padding: 4em 1em;
-}
-
-#info-numbers {
-  margin: 1.5em 0;
-}
-
-#info-banner {
-  align-items: center;
-  display: flex;
-  margin-bottom: 2.5em;
-}
-
-#info-numbers h3 {
-  font-size: 3em;
-}
-
-h3.primary-color{
-  margin: 5px;
-    background-color: #fff;
-    color: #000;
-    border-radius: 15px;
-}
-
-@media (min-width: 768px) {
-  #info-content {
-    padding: 3.5em;
-  }
-}
-
-
-
+@import "../css/sobre.css";
 
 /* SLIDER / PROJETOS*/
+@import "../css/sliderCards.css";
 
-#slider{
-    margin-top: 8em;
-    margin-bottom: 1em;
-
-}
-
-#slider .carousel-caption{
-    color: orange;
-    bottom: 2em;
-}
-
-#slider .carousel-caption h5{
-    font-size: 2.5em;
-    text-shadow: #000 2px 2px;
-}
+/*Atuacao*/
+@import "../css/atuacao.css";
 
 
-#slider .btn {
-    padding: 0.3 0.8em;
-    font-size: 1em;
-    margin-top: 1em;
-    
-}
-
-.carousel-control-prev i,
-.carousel-control-next i{
-
-    font-size: 3em;
-    top: 0;
-    color: #000;
-    
-}
-
-.carousel-indicators [data-bs-target] {
-    background-color: #222;
-    opacity: 0.8;
-
-}
-
-.carousel-indicators .active {
-    background-color: orange;
-}
-
-
-@media(min-width: 768px) {
-    #slider .carousel-caption{
-        color: orange;
-        bottom: 15em;
-    }
-
-    #slider .carousel-caption h5{
-        font-size: 4em;
-        text-shadow: #000 2px 3px;
-    }
-
-    #slider .btn {
-        padding: 0.6 1.6em;
-        font-size: 1.2em;  
-    }
-
-    .carousel-indicators{
-        bottom: 7em;
-    }
-}
-
-
-/* MINI BANNERS */
-#mini-banners {
-    margin-bottom: 4em;
-  }
-  
-  #mini-banners .card {
-    padding: 2em 0.3em;
-    border-radius: 0;
-  }
-  
-  #mini-banners i {
-    font-size: 4em;
-  }
-
-  #mini-banners p {
-    color: #000;
-  }
-  
-  #mini-banners .card-title {
-    margin-bottom: 1.5em;
-  }
-  
-  #mini-banners .btn {
-    margin-top: 1.5em;
-    padding: 0.6em 1.2em;
-  }
-  
-  #mini-banners .card {
-    margin-bottom: 1em;
-  }
-  
-  @media (min-width: 768px) {
-    #mini-banners {
-      margin-top: 2em;
-      height: 300px;
-    }
-  }
-  
-  /*Atuacao*/
-
-  #atuacao p{
-    color: #000;
-  }
-
-
-
-  /* DESTAQUES */
-  #featured-container {
-    margin-bottom: 4em;
-  }
-
-  
-  #featured-images {
-    margin-top: 2em;
-  }
-  
-  #featured-images .col-md-4 {
-    position: relative;
-    cursor: pointer;
-  }
-  
-  #featured-images .col-md-4:hover > .banner-content {
-    opacity: 0.8;
-  }
-  
-  #featured-images .banner-content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    opacity: 0.6;
-    transition: 0.5s;
-  }
-  
-  @media (min-width: 768px) {
-    .title {
-      font-size: 2.4em;
-    }
-  
-    .title:before {
-      bottom: 1.5em;
-    }
-  
-    #featured-images .banner-content {
-      opacity: 0;
-    }
-  }
+/* DESTAQUES */
+@import "../css/portfolio.css";
   
 /*Contato*/
-.mb-3{
-  color: #fff;
-  text-align: left;
-}
-
-
-
-
+@import "../css/contato.css";
 
 /* FOOTER TOP */
-#footer {
-  padding: 3em 2em;
-}
-
-#footer p{
-  color: #888;
-}
-
-#footer-top {
-  margin-bottom: 2em;
-}
-
-#footer-top,
-#footer-top i {
-  color: #fff;
-}
-
-#social-icons {
-  text-align: right;
-}
-
-#social-icons i {
-  margin-right: 1em;
-  font-size: 1.5em;
-  cursor: pointer;
-}
-
-#social-icons i:hover {
-  color: #7a7a7a;
-}
-
-/* FOOTER DETAILS */
-#footer-details {
-  margin-bottom: 3em;
-}
-
-#news-container,
-#contact-container,
-#links-container {
-  padding: 0;
-  border: 0;
-  margin-bottom: 2em;
-}
-
-#footer-details h4 {
-  color: #fff;
-  margin-bottom: 1.5em;
-}
-
-#news-container input {
-  border-radius: 0;
-  border: none;
-}
-
-#links-container li {
-  margin-bottom: 0.5em;
-}
-
-#links-container a {
-  text-decoration: none;
-}
-
-#links-container a:hover {
-  color: #fff;
-}
-
-/* FOOTER BOTTOM */
-#footer-bottom {
-  border-top: 1px solid #7a7a7a;
-  padding-top: 2em;
-}
-
-#footer-bottom i {
-  color: #e61e10;
-}
-
-@media (min-width: 768px) {
-  #news-container {
-    padding-right: 2em;
-  }
-
-  #contact-container {
-    padding: 0 2em;
-    border-left: 1px solid #7a7a7a;
-    border-right: 1px solid #7a7a7a;
-  }
-
-  #links-container {
-    padding-left: 2em;
-  }
-}
-
+@import "../css/footer.css";
