--- a/assets/libs/css/contato.css
+++ b/assets/libs/css/contato.css
@@ -3,3 +3,49 @@
     text-align: left;
   }
   
+.titleEmail{
+  color: #FFF;
+  text-align: left;
+
+}
+
+.conteudo{
+  margin: 0 auto;
+  width: 100%;
+  background: #000;
+  padding: 55px;
+  border-radius: 12px;
+}
+
+
+#listaEmail{
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+#listaEmail li{
+  padding: 20px;
+  background: #191818;
+  border-radius: 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+
+
+.btnAcao{
+  border-radius: 20px;
+  border: 1px solid #191818;
+  width: 38px;
+  height: 38px;
+  margin-right: 8px;
+  cursor: pointer;
+  background: #2b2a2a;
+}
+
+.btnAcao:hover{
+  background: #3c3a3a;
+}
