--- a/assets/libs/css/contato.css
+++ b/assets/libs/css/contato.css
@@ -1,14 +1,14 @@
-.mb-3{
-    color: #fff;
-    text-align: left;
-  }
-  
-.titleEmail{
-  color: #FFF;
+.mb-3 {
+  color: #fff;
   text-align: left;
 }
 
-.conteudo{
+.titleEmail {
+  color: #fff;
+  text-align: left;
+}
+
+.conteudo {
   margin: 0 auto;
   width: 100%;
   background: #000;
@@ -16,14 +16,13 @@
   border-radius: 12px;
 }
 
-
-#listaEmail{
+#listaEmail {
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
 
-#listaEmail li{
+#listaEmail li {
   padding: 20px;
   background: #191818;
   border-radius: 12px;
@@ -33,15 +32,15 @@
   margin-top: 20px;
 }
 
-.nomeEnviado{
+.nomeEnviado {
   font-size: 18px;
 }
 
-.comentarioEnviado{
+.comentarioEnviado {
   font-size: 15px;
 }
 
-.btnAcao{
+.btnAcao {
   border-radius: 20px;
   border: 1px solid red;
   width: 38px;
@@ -51,6 +50,95 @@
   background: #2b2a2a;
 }
 
-.btnAcao:hover{
+.btnAcao:hover {
+  background: #3c3a3a;
+}
+
+#janelaEdicao {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background: #191818;
+  border: 1px solid #2f2e2e;
+  width: 415px;
+  border-radius: 12px;
+  z-index: 200;
+  display: none;
+}
+
+#janelaEdicao.abrir {
+  display: block !important;
+}
+
+#janelaEdicaoFundo {
+  position: fixed;
+  top: 0;
+  background-color: #000;
+  bottom: 0;
+  left: 0;
+  opacity: 0.9;
+  z-index: 100;
+  right: 0;
+  display: none;
+}
+
+#janelaEdicaoFundo.abrir {
+  display: block !important;
+}
+
+#janelaEdicaoBtnFechar {
+  position: absolute;
+  top: -25px;
+  right: -18px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 1px solid #2d2c2c;
+  background: #2d2c2c;
+  color: #fff;
+  outline: none;
+}
+
+form {
+  width: 100%;
+  margin-top: 20px;
+}
+
+.frm-linha {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.frm-linha label {
+  margin-bottom: 7px;
+}
+
+.frm-linha input {
+  padding: 15px;
+  border-radius: 12px;
+  outline: none;
+  border: 1px solid #191818;
+  font-size: 1.2rem;
+  background: #2d2c2c;
+  color: #fff;
+}
+
+.frm-linha button {
+  background: #2d2c2c;
+  border: 1px solid #191818;
+  padding: 7px;
+  margin-bottom: 10px;
+  border-radius: 12px;
+  color: #ccc;
+  cursor: pointer;
+  height: 50px;
+  font-size: 1.3rem;
+  outline: none;
+}
+
+.frm-linha button:hover {
   background: #3c3a3a;
 }
