--- a/assets/libs/css/home.css
+++ b/assets/libs/css/home.css
@@ -1,83 +1,80 @@
 /*Home*/
 
 section#home {
-    height: calc(100vh + 80px);
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding: 5px 20px;
-    width: 100%;
-    
-  }
-  
-  .home-info {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    text-align: justify;
-    color: #fff;
-  }
-  
-  .home-info button {
-    border: none;
-    width: 150px;
-    padding: 10px;
-    background-color: #7700ff;
-    color: white;
-    font-size: 18px;
-    cursor: pointer;
-    opacity: 0.9;
-    border-radius: 5px;
-  }
-  
-  .home-info button a{
-    color: white;
-  }
-  
-  .home-info button:hover{
-    opacity: 1;
-  }
-  
-  .home-img {
-    width: 50%;
-    display: flex;
-    align-items: center;
+  height: calc(100vh + 80px);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 5px 20px;
+  width: 100%;
+}
+
+.home-info {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  text-align: justify;
+  color: #fff;
+}
+
+.home-info button {
+  border: none;
+  width: 150px;
+  padding: 10px;
+  background-color: #7700ff;
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+  opacity: 0.9;
+  border-radius: 5px;
+}
+
+.home-info button a {
+  color: white;
+}
+
+.home-info button:hover {
+  opacity: 1;
+}
+
+.home-img {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.home-img img {
+  width: 200px;
+  height: 200px;
+  box-shadow: 0 10px 10px;
+  border-radius: 50%;
+}
+
+.home-position {
+  font-style: italic;
+}
+
+/*Mobile*/
+
+@media (max-width: 450px) {
+  header {
     justify-content: center;
   }
-  
-  .home-img img {
-    width: 200px;
-    height: 200px;
-    box-shadow: 0 10px 10px;
-    border-radius: 50%;
-  }
-  
-  .home-position {
-    font-style: italic;
-  }
-  
-  
-  
-  
-  /*Mobile*/
-  
-  @media (max-width: 450px) {
-    header {
-    justify-content: center;
-    }
-    
+
   .logo {
     display: none;
-    }
-  
+  }
+
   section#home {
     flex-direction: column-reverse;
     justify-content: center;
-    }
-  
-  .home-info, .home-img {
+  }
+
+  .home-info,
+  .home-img {
     width: 100%;
     padding: 10px;
-    }
   }
+}
