--- a/assets/libs/css/nav.css
+++ b/assets/libs/css/nav.css
@@ -1,16 +1,21 @@
-.navbar-brand{
-    padding: 0;
+.navbar-brand {
+  padding: 0;
 
-    background-image: linear-gradient(90deg, rgba(186,10,208,1) 30%, rgba(76,127,240,1) 60%, rgba(9,72,214,1) 100%);
+  background-image: linear-gradient(
+    90deg,
+    rgba(186, 10, 208, 1) 30%,
+    rgba(76, 127, 240, 1) 60%,
+    rgba(9, 72, 214, 1) 100%
+  );
 
-    background-clip: text;
-    -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-background-clip: text;
 
-    -webkit-text-fill-color: transparent;
+  -webkit-text-fill-color: transparent;
 
-    color: black;
+  color: black;
 }
 
-.navbar-expand-lg .navbar-nav .nav-link{
-    padding: 1rem .8rem;
+.navbar-expand-lg .navbar-nav .nav-link {
+  padding: 1rem 0.8rem;
 }
