--- a/assets/libs/css/portfolio.css
+++ b/assets/libs/css/portfolio.css
@@ -1,46 +1,49 @@
 #featured-container {
-    margin-bottom: 4em;
+  margin-bottom: 4em;
+}
+
+#featured-images {
+  margin-top: 2em;
+}
+
+#featured-images .col-md-4 {
+  position: relative;
+  cursor: pointer;
+}
+
+#featured-images .col-md-4:hover > .banner-content {
+  opacity: 0.8;
+}
+
+#featured-images .banner-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  opacity: 0.6;
+  transition: 0.5s;
+}
+
+@media (min-width: 768px) {
+  .title {
+    font-size: 2.4em;
   }
 
-  
-  #featured-images {
-    margin-top: 2em;
+  .title:before {
+    bottom: 1.5em;
   }
-  
-  #featured-images .col-md-4 {
-    position: relative;
-    cursor: pointer;
-  }
-  
-  #featured-images .col-md-4:hover > .banner-content {
-    opacity: 0.8;
-  }
-  
+
   #featured-images .banner-content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    opacity: 0.6;
-    transition: 0.5s;
+    opacity: 0;
   }
-  
-  @media (min-width: 768px) {
-    .title {
-      font-size: 2.4em;
-    }
-  
-    .title:before {
-      bottom: 1.5em;
-    }
-  
-    #featured-images .banner-content {
-      opacity: 0;
-    }
-  }
+}
+
+.hover:hover {
+  color: blue;
+}
